--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
             <img src="cognizant-new-logo-400px.jpg" alt="Cognizant Technology Solutions" />
           </div>
           <div class="timeline-content">
-            <h3>Mid-level Data Engineer</h3>
+            <h3>Data Engineer</h3>
             <h4>Cognizant Technology Solutions | Client: Truist Financial</h4>
-            <span class="date">Jan 2022 - Aug 2023 </span>
+            <span class="date">November 2020 - August 2023 </span>
             <p>
               As a Data Engineer at Truist, I worked on optimizing data pipelines by
                automating data extraction, transformation, and pre-processing tasks, 
@@ -195,14 +195,14 @@
             </ul>
           </div>
         </div>
-        <div class="timeline-item">
+        <!-- <div class="timeline-item">
           <div class="icon">
             <img src="cognizant-new-logo-400px.jpg" alt="CTS" />
           </div>
           <div class="timeline-content">
             <h3>Data Engineer</h3>
             <h4>Cognizant Technology Solutions | Client: Apollo Hospitals</h4>
-            <span class="date">Nov 2020 - Dec 2021 </span>
+            <span class="date">November 2020 - August 2023 </span>
             <p>
               As a Data Engineer at Truist, I worked on optimizing data pipelines by
                automating data extraction, transformation, and pre-processing tasks, 
@@ -224,31 +224,31 @@
                 (RBAC) and encryption in Snowflake and Spark.
             </p>
             <ul class="skills">
-              <li class="skill-box">Data Pipeline Development (PySpark, SQL, ADLS Gen 2, Snowflake)</li>
+              <li class="skill-box">Data Pipeline Development (PySpark, SQL, ADLS Gen 2, Snowflake)</li> -->
               <!-- <li class="skill-box">ETL Process Automation (Python, Shell Scripting, Azure Data Factory)</li> -->
-              <li class="skill-box">Data Transformation & Cleaning (Pandas, NumPy)</li>
+              <!-- <li class="skill-box">Data Transformation & Cleaning (Pandas, NumPy)</li> -->
               <!-- <li class="skill-box">SQL Querying & Optimization (Complex Queries, Data Aggregations)</li> -->
               <!-- <li class="skill-box">Real-Time Data Processing (Adaptive Query Execution)</li> -->
-              <li class="skill-box">Performance Optimization (Spark Partitioning, Bucketing)</li>
+              <!-- <li class="skill-box">Performance Optimization (Spark Partitioning, Bucketing)</li> -->
               <!-- <li class="skill-box">Data Validation (Custom ETL Workflows, Data Cleansing)</li> -->
               <!-- <li class="skill-box">Data Warehousing (Snowflake, Data Marts, Reporting)</li> -->
               <!-- <li class="skill-box">Data Security & Compliance (GDPR, CCPA, Role-Based Access Control (RBAC), Encryption)</li> -->
-              <li class="skill-box">Business Intelligence (Power BI)</li>
-              <li class="skill-box">Cross-Functional Collaboration</li>
+              <!-- <li class="skill-box">Business Intelligence (Power BI)</li> -->
+              <!-- <li class="skill-box">Cross-Functional Collaboration</li> -->
               <!-- <li class="skill-box">Event Planning and Coordination</li> -->
               <!-- <li class="skill-box">Automation & Scheduling (Shell Scripts, Job Monitoring)</li> -->
-              <li class="skill-box">Cloud Computing (AWS, Azure)</li>
-            </ul>
+              <!-- <li class="skill-box">Cloud Computing (AWS, Azure)</li> -->
+            <!-- </ul>
           </div>
-        </div>
+        </div> -->
         <div class="timeline-item">
           <div class="icon">
             <img src="avanti.jpg" alt="CTS" />
           </div>
           <div class="timeline-content">
             <h3>ETL Developer</h3>
-            <h4>Avanti Seeds Limited – Hyderabad, India </h4>
-            <span class="date">June 2019 - Oct 2020 </span>
+            <h4>Avanti Feeds Limited – Hyderabad, India </h4>
+            <span class="date">July 2018 - October 2020 </span>
             <p>
               As an ETL Developer at Avanti Seeds Limited, I optimized SQL queries and 
               automated ETL workflows to streamline data processes across the company’s 
